--- a/MyApplication/app/src/main/res/layout/activity_preference_detailtwo.xml
+++ b/MyApplication/app/src/main/res/layout/activity_preference_detailtwo.xml
@@ -37,26 +37,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/Tellus" />
 
+    <Spinner
+        android:id="@+id/editText1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/rounded_rectangle"
+        android:entries="@array/gender"
+        android:minHeight="48dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/Gender" />
+
     <!-- Height -->
 
-    <EditText
-        android:id="@+id/editText1"
-        android:layout_width="279dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/signup_rectangle"
-        android:hint=" Enter Gender"
-        android:textColor="#000000"
-        android:inputType="text|textNoSuggestions"
-        android:maxLines="1"
-        android:lines="1"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.121"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/Gender"
-        app:layout_constraintVertical_bias="0.129" />
+
 
     <TextView
         android:id="@+id/Height"
