--- a/MyApplication/app/src/main/res/values/arrays.xml
+++ b/MyApplication/app/src/main/res/values/arrays.xml
@@ -9,6 +9,13 @@
         <item>Vegan</item>
         <item>Pescatarian</item>
     </string-array>
+
+    <string-array name="gender">
+    <item>Male</item>
+    <item>Female</item>
+    <item>Non-binary</item>
+    <item>Other</item>
+    </string-array>
 </resources>
 
 
