--- a/MyApplication/app/src/main/res/layout/activity_profiledetailone.xml
+++ b/MyApplication/app/src/main/res/layout/activity_profiledetailone.xml
@@ -25,13 +25,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
-        android:text="First name"
-        android:textStyle="bold"
+        android:text="First Name"
         android:textColor="#000000"
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.205"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@id/editText1"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@id/editText1"
         app:layout_constraintTop_toBottomOf="@id/imageView" />
 
     <EditText
@@ -58,13 +58,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Last name"
-        android:textStyle="bold"
+        android:text="Last Name"
         android:textColor="#000000"
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.204"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@id/editText2"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@id/editText2"
         app:layout_constraintTop_toBottomOf="@id/editText1" />
 
     <EditText
@@ -93,7 +93,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Please enter your Birthdate"
+        android:text="Please Enter Your Birthdate"
         android:textColor="#000000"
         android:textStyle="bold"
         android:textSize="24sp"
