--- a/MyApplication/app/src/main/res/layout/activity_signup.xml
+++ b/MyApplication/app/src/main/res/layout/activity_signup.xml
@@ -9,88 +9,93 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/logo_top_margin"
         android:src="@drawable/logo"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="@dimen/logo_top_margin" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/logo_to_first_element_margin"
+        android:gravity="start"
         android:text="TU/e Email:"
-        android:textStyle="bold"
         android:textColor="#000000"
         android:textSize="18sp"
-        android:gravity="start"  
-        app:layout_constraintStart_toStartOf="@id/editText1"  
-        app:layout_constraintEnd_toEndOf="@id/editText1" 
-        app:layout_constraintTop_toBottomOf="@id/imageView"
-        android:layout_marginTop="@dimen/logo_to_first_element_margin" />
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@id/editText1"
+        app:layout_constraintStart_toStartOf="@id/editText1"
+        app:layout_constraintTop_toBottomOf="@id/imageView" />
 
     <EditText
         android:id="@+id/editText1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:minHeight="48dp"
+        android:layout_marginTop="@dimen/between_elements_spacing"
+        android:background="@drawable/signup_rectangle"
         android:hint="  Enter email"
         android:inputType="textEmailAddress"
         android:maxLines="1"
+        android:minHeight="48dp"
         android:padding="8dp"
-        android:background="@drawable/signup_rectangle"
         android:textColor="#000000"
         android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/textView1"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintWidth_percent="0.8"
-        android:layout_marginTop="@dimen/between_elements_spacing" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView1"
+        app:layout_constraintWidth_percent="0.8" />
 
     <!-- Assuming this is where editText2 should be -->
     <TextView
         android:id="@+id/textView2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/element_spacing"
+        android:gravity="start"
         android:text="Enter a password:"
-        android:textStyle="bold"
         android:textColor="#000000"
         android:textSize="18sp"
-        android:gravity="start"  
-        app:layout_constraintStart_toStartOf="@id/editText1"  
-        app:layout_constraintEnd_toEndOf="@id/editText1" 
-        app:layout_constraintTop_toBottomOf="@id/editText1"
-        android:layout_marginTop="@dimen/element_spacing" />
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@id/editText1"
+        app:layout_constraintStart_toStartOf="@id/editText1"
+        app:layout_constraintTop_toBottomOf="@id/editText1" />
+
+    <EditText
+        android:id="@+id/editText3"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="494dp"
+        android:layout_marginBottom="189dp"
+        android:background="@drawable/signup_rectangle"
+        android:hint="  Enter password"
+        android:inputType="textPassword"
+        android:maxLines="1"
+        android:minHeight="48dp"
+        android:padding="8dp"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.512"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.8" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="460dp"
         android:gravity="start"
         android:text="Enter your password again:"
         android:textColor="#000000"
         android:textSize="18sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="40dp"
-        tools:layout_editor_absoluteY="446dp" />
-
-    <EditText
-        android:id="@+id/editText4"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:minHeight="48dp"
-        android:hint="  Repeat password"
-        android:inputType="textPassword"
-        android:maxLines="1"
-        android:padding="8dp"
-        android:background="@drawable/signup_rectangle"
-        android:textColor="#000000"
-        android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/textView3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintWidth_percent="0.8"
-        android:layout_marginTop="@dimen/between_elements_spacing" />
+        app:layout_constraintEnd_toEndOf="@id/editText3"
+        app:layout_constraintStart_toStartOf="@id/editText3"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editText2"
@@ -111,18 +116,18 @@
         app:layout_constraintWidth_percent="0.8" />
 
     <Button
-        android:id="@+id/signupButton"  
+        android:id="@+id/signupButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:minHeight="48dp"
         android:background="@drawable/rounded_rectangle"
+        android:minHeight="48dp"
         android:text="SIGN UP"
         android:textColor="#ffffff"
         android:textSize="22sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.8"
-        app:layout_constraintVertical_bias="0.9" />
+        app:layout_constraintVertical_bias="0.9"
+        app:layout_constraintWidth_percent="0.8" />
 </androidx.constraintlayout.widget.ConstraintLayout>
