--- a/MyApplication/app/src/main/res/layout/activity_preference_detailtwo.xml
+++ b/MyApplication/app/src/main/res/layout/activity_preference_detailtwo.xml
@@ -72,10 +72,11 @@
         android:id="@+id/minHeightSpinner"
         android:layout_width="0dp"
         android:layout_height="48dp"
-        android:entries="@array/height"
+        android:layout_marginTop="8dp"
         android:background="@drawable/rounded_spinner"
-        app:layout_constraintStart_toStartOf="@+id/minAgeSpinner"
+        android:entries="@array/height"
         app:layout_constraintEnd_toStartOf="@+id/gap2"
+        app:layout_constraintStart_toStartOf="@+id/minAgeSpinner"
         app:layout_constraintTop_toBottomOf="@+id/Height"
         app:layout_constraintWidth_default="wrap" />
 
@@ -156,7 +157,7 @@
         android:layout_height="48dp"
         android:background="@drawable/rounded_spinner"
         android:entries="@array/age_range"
-        app:layout_constraintStart_toEndOf="Height"
+        app:layout_constraintStart_toEndOf="@+id/Height"
         app:layout_constraintEnd_toStartOf="@+id/gap"
         app:layout_constraintTop_toBottomOf="@+id/age"
         app:layout_constraintWidth_default="wrap" />
